@@ -69,6 +69,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      * to be used in an edit form, the final commit will be handled buy the user save.
      * 
      */
+    @Override
     public WOActionResults deleteAction() {
     	return deleteObjectWithFinalCommit(false);
     }
@@ -90,6 +91,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      * <p>
      * Defaults to "Remove"
      */
+    @Override
     public String buttonLabel() {
     	if (_buttonLabel == null) {
 			_buttonLabel = stringValueForBinding(Keys.removeButtonLabel, "Remove");
@@ -100,6 +102,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
     /**
      * CSS class for the Remove button.
      */
+	@Override
 	public String buttonClass() {
 		String result = null;
 		if (  hasAnyAction() && !showDialog() ) {
@@ -116,6 +119,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      * Defaults to "Button ObjButton DeleteObjButton"
      * 
 	 */
+	@Override
 	public String activeButtonClass() {
 		if (_buttonClass == null) {
 			_buttonClass = stringValueForBinding(Keys.classForRemoveObjButton, "Button ObjButton DeleteObjButton");
@@ -129,6 +133,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      * Defaults to "Button ObjButton DisabledObjButton DisabledDeleteObjButton"
      * 
 	 */
+	@Override
 	public String disabledButtonClass() {
 		if (_disabledButtonClass == null) {
 			_disabledButtonClass = stringValueForBinding(Keys.classForDisabledRemoveObjButton, "Button ObjButton DisabledObjButton DisabledDeleteObjButton");
@@ -209,7 +214,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      */
     public Boolean showDeleteButton() {
     	if (_showDeleteButton == null) {
-    		_showDeleteButton = new Boolean(canDelete() && ERXValueUtilities.booleanValue(valueForBinding("isEntityDeletable")));
+    		_showDeleteButton = Boolean.valueOf(canDelete() && ERXValueUtilities.booleanValue(valueForBinding("isEntityDeletable")));
     	}
     	return _showDeleteButton;
     }
@@ -223,6 +228,7 @@ public class ERMDRemoveRelatedButton extends ERMDDeleteButton {
      * 		confirmRemoveRelatedMessage
      * 		confirmDeleteRelatedMessage
      */
+    @Override
     public String dialogMessage() {
     	if (_dialogMessage == null) {
     		Object result = null;
