@@ -1,10 +1,14 @@
 package er.grouping;
 
-import java.text.*;
+import java.text.Format;
 
 import org.apache.log4j.Logger;
 
-import com.webobjects.foundation.*;
+import com.webobjects.foundation.NSArray;
+import com.webobjects.foundation.NSDictionary;
+import com.webobjects.foundation.NSMutableDictionary;
+import com.webobjects.foundation.NSTimestamp;
+import com.webobjects.foundation.NSTimestampFormatter;
 
 /**
  * The "value" for the {@link DRMasterCriteria}. For example, given
@@ -13,11 +17,11 @@ import com.webobjects.foundation.*;
  * Some DRCriteria have very high scores and so always end up on the bottom;
  * for example: "OTHER" and "TOTAL". <br />
  * For numeric DRCriteria, the value is a really huge number and
- * 1 + a really huge number ({@link MAXNUMBER}), respectively.
- * For alpha DRCriteria. the value is a long word filled with z's ({@link MAXSTRING})
+ * 1 + a really huge number ({@link #MAXNUMBER}), respectively.
+ * For alpha DRCriteria. the value is a long word filled with z's ({@link #MAXSTRING})
  * and the same with one z concatenated, respectively.
  */
-public class DRCriteria extends Object  {
+public class DRCriteria {
     private static final Logger log = Logger.getLogger(DRCriteria.class);
 
     protected NSDictionary _valueDict;
@@ -123,6 +127,7 @@ public class DRCriteria extends Object  {
         return _valueDict;
     }
 
+    @Override
     public String toString() {
         return  "<DRCriteria valueDict: " + _valueDict + "; >";
     }
@@ -187,7 +192,7 @@ public class DRCriteria extends Object  {
         Object high = dict.objectForKey("H");
         Object low = dict.objectForKey("L");
 
-        String calFormat = this.calendarFormatForDates();
+        String calFormat = calendarFormatForDates();
         Format formatter = DRCriteria.formatterForFormat(calFormat);
 
         if (high instanceof NSTimestamp) {
@@ -202,7 +207,7 @@ public class DRCriteria extends Object  {
             lowString = low.toString();
         }
         
-        lbl = lbl + lowString + this.rangeSeparator() + highString;
+        lbl = lbl + lowString + rangeSeparator() + highString;
         return lbl;
     }
 
@@ -218,13 +223,13 @@ public class DRCriteria extends Object  {
                 Object rawVal = _valueDict.objectForKey(smc.keyDesc());
 
                 if (rawVal instanceof NSDictionary) {
-                    lbl = lbl.concat(this.labelForDict((NSDictionary)rawVal));
+                    lbl = lbl.concat(labelForDict((NSDictionary)rawVal));
                 } else {
                     lbl = lbl.concat(smc.lookUpKeyForValue(rawVal));
                 }
 
                 if (!(i == (cnt-1))) {
-                    lbl = lbl.concat(this.compoundSeparator());
+                    lbl = lbl.concat(compoundSeparator());
                 }
 
             }
@@ -251,26 +256,26 @@ public class DRCriteria extends Object  {
                     if (subMcs.count() > 1 || _masterCriteria.isString()) {
                         scr = MAXSTRING;
                     } else {
-                        scr = new Double(MAXNUMBER+1);
+                        scr = Double.valueOf(MAXNUMBER+1);
                     }
                 } else if (_valueDict.objectForKey("TOTAL") != null) {
                     if (subMcs.count() > 1 || _masterCriteria.isString()) {
                         scr = MAXSTRING.concat("z");
                     } else {
-                        scr = new Double(MAXNUMBER+2);
+                        scr = Double.valueOf(MAXNUMBER+2);
                     }
                 } else if (subMcs.count() > 1) {
-                    scr = this.label().toLowerCase();
+                    scr = label().toLowerCase();
                 } else if (rawVal instanceof NSDictionary) {
                     Object v = ((NSDictionary)rawVal).objectForKey("L");
                     //OWDebug.println(1, "v:"+v);
                     try{
                         if (v instanceof String)
-                            scr = new Double((String)v);
+                            scr = Double.valueOf((String)v);
                         else
                             scr = DRValueConverter.converter().numberForValue(v);
                     } catch(NumberFormatException e) {
-                        scr = new Double(-1.0*MAXNUMBER);
+                        scr = Double.valueOf(-1.0*MAXNUMBER);
                     }
                 } else if(rawVal instanceof String){
                     scr = ((String)rawVal).toLowerCase();
